Fix T51821: Viewport not updating when switching worlds